syntax = "proto3";

package Auth;

option go_package = "/pb";

enum Role {
    teacher = 0;
    student = 1;
}

message RegisterRequest {
    string Username = 1;
    string Email = 2;
    string Password = 3;
    Role Role = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string AccessToken = 1;
    string RefreshToken = 2;
}